# claude-supervisor

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  attach-run.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ALPHA_TESTING.md  ARCHITECTURE.md  CLAUDE_CODE_INTEGRATION.md  RELEASING.md  TODO.md  announcement.md  devto-post.md
docs/demo/: README.md  config.yaml  mock_claude.py  quickstart.tape  seed_demo.py  status.tape  statusline.tape
examples/: config.yaml
integrations/claude-code/: README.md
integrations/claude-code/commands/: supervisor.md
src/claude_supervisor/: __init__.py
src/claude_supervisor/cli/: __init__.py  app.py
src/claude_supervisor/config/: __init__.py  loader.py  models.py
src/claude_supervisor/core/: __init__.py  attach.py  stats.py  supervisor.py  transcript.py
src/claude_supervisor/logging/: __init__.py  setup.py
src/claude_supervisor/parser/: __init__.py  events.py  parser.py  patterns.py  reset_time.py
src/claude_supervisor/parser/rules/: claude.yaml
src/claude_supervisor/permissions/: __init__.py  engine.py
src/claude_supervisor/resume/: __init__.py  clock.py  planner.py
src/claude_supervisor/session/: __init__.py  manager.py
src/claude_supervisor/state_machine/: __init__.py  machine.py  states.py
src/claude_supervisor/storage/: __init__.py  base.py  sqlite.py
src/claude_supervisor/terminal/: __init__.py  backends.py  base.py  factory.py  host.py  threaded.py
tests/: test_attach.py  test_cli.py  test_clock.py  test_config.py  test_logging.py  test_parser.py  test_patterns.py  test_permissions.py  test_planner.py  test_reset_time.py  test_session.py  test_state_machine.py  test_storage.py  test_supervisor.py  test_terminal.py  test_transcript.py
tests/integration/: test_pty_integration.py
